# UberAI

./: README.md
2025-1A-T05-CC11-G02-main/2025-1A-T05-CC11-G02-main/: .gitignore
2025-1A-T05-CC11-G02-main/2025-1A-T05-CC11-G02-main/app/backend/: api.py  fast_api.py  fluxo.md  main.py  pyproject.toml  test.py
2025-1A-T05-CC11-G02-main/2025-1A-T05-CC11-G02-main/app/backend/agents/: common_models.py  intent_classifier.py  list_correction_agent.py  something2list.py  substituicao.py
2025-1A-T05-CC11-G02-main/2025-1A-T05-CC11-G02-main/app/backend/retrieval/: __init__.py
2025-1A-T05-CC11-G02-main/2025-1A-T05-CC11-G02-main/app/backend/utils/: format_result.py
2025-1A-T05-CC11-G02-main/2025-1A-T05-CC11-G02-main/artigo/: artigo.md
2025-1A-T05-CC11-G02-main/2025-1A-T05-CC11-G02-main/docs/: fluxo_llms.md  justificativa_modelo_teste_ragas.md  llm_flow.excalidraw  rel-database.excalidraw  relatorio_arquitetura.md
app/backend/: README.md  requirements.txt  todo.md
app/backend/agents/: __init__.py  context_expansion_agent.py  disambiguation_agent.py  helper_agent.py  product_filter_agent.py  recommendation_agent.py
app/backend/data/: preprocess_data.py
app/backend/retrieval/: hybrid_retrieval.py
app/frontend/: README.md
app/frontend/app/: _layout.tsx  market-item-products.tsx
app/frontend/app/(tabs)/: _layout.tsx  (+1 more)
app/frontend/components/: CustomStatusBar.tsx  Header.tsx  MarketProductDisplay.tsx  MessageBubble.tsx  Suggestions.tsx
app/frontend/data/: marketData.ts
app/frontend/ios/: Podfile
app/frontend/services/: api.ts
docs/: modelo_substituicao.md
(+16 files in other folders)
